--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Two Numbers</title>
 </head>
 <body>
-
+{% block body %}
+{% endblock %}
 </body>
 </html>
