Css and output pages

--- a/templates/output.html
+++ b/templates/output.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends "layout.html" %}
 
-</body>
-</html>
+{% block body  %}
+
+    your inputs: {{ input1 }} and {{ input2 }}
+    add up too: {{ output }}
+
+{% endblock  %}
