--- a/templates/output.html
+++ b/templates/output.html
@@ -2,7 +2,7 @@
 
 {% block body  %}
 
-    your inputs: {{ input1 }} and {{ input2 }}
-    add up too: {{ output }}
+    Your two inputs: {{ num1 }} and {{ num2 }} With the operation: {{ operation }}
+    Return the value of: {{ output }}
 
 {% endblock  %}
