--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Two Numbers</title>
 </head>
 <body>
-
+{% block body %}
+{% endblock %}
 </body>
 </html>
